# BUAA-2021CO

./: BUAA-2021CO.md  README.md
p0/: exam1.circ  exam3.asm  exam3.circ  mips1.asm  mips2.asm  mips3.asm  smp.asm  test1.circ  test2.circ  test3.circ
p1/: test1.circ  test2.circ  test3.circ  test4.circ  test5.circ
p2/: mips1.asm  mips2.asm  mips3.asm
p3/: cpu_1.circ
p4/: p4.circ
p5/: p5.circ
p7/选做实验一代码/: CMakeLists.txt  Makefile  ass1.in  ass1.int  ass1.out  ass2.in  ass2.int  ass2.out  assembler.c  linker.c  lnk.out  make.bat  my_assembler_utils.c  my_assembler_utils.h  my_linker_utils.c  my_linker_utils.c.bak  my_linker_utils.h
p7/选做实验一代码/assembler-src/: assembler_utils.h
p7/选做实验一代码/lib/: tables.h  translate.h  translate_utils.h
p7/选做实验一代码/linker-src/: linker_utils.h
